[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bpr_sctk"
version = "0.1.0"
description = "Multimodal single-cell toolkit (UMAP/Leiden, GMM-based ADT denoising, QC, visualization, etc.)"
authors = [
  {name="Brett", email="bpr4242@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["single-cell", "scRNA-seq", "scanpy", "muon", "rapids", "ADTnorm"]

dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "seaborn",
  "scanpy",
  "muon",
  "scikit-learn",
  "joblib",
]

[project.urls]
"Homepage" = "https://github.com/bpr4242/bpr_sctk"
"Bug Tracker" = "https://github.com/bpr4242/bpr_sctk/issues"
